[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pokemon carta base.png" type="Texture" id=2]
[ext_resource path="res://Assets/Types/Fire.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PokemonCardScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/Pokemon/charmander.png" type="Texture" id=5]
[ext_resource path="res://Assets/heartFilled.png" type="Texture" id=6]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/electric.png-16a320154dae50ad3dc2058ea091250d.stex"

[sub_resource type="GDScript" id=2]
script/source = "extends HBoxContainer


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	print(get_child_count())
	
func _on_mouse_exited():
	print(\"Resized\")

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="PokemonCardScene" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 4 )

[node name="background" type="NinePatchRect" parent="."]
margin_top = 1.0
margin_right = 164.0
margin_bottom = 201.0
texture = ExtResource( 2 )

[node name="typeSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 51.5762, 47.8741 )
scale = Vector2( 0.147119, 0.139371 )
texture = SubResource( 1 )

[node name="heartPanel" type="HBoxContainer" parent="."]
margin_left = 41.0
margin_top = 24.0
margin_right = 122.0
margin_bottom = 55.0
size_flags_horizontal = 12
size_flags_vertical = 0
alignment = 1
script = SubResource( 2 )

[node name="heart" type="TextureRect" parent="heartPanel"]
visible = false
margin_left = 35.0
margin_right = 45.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 15 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="pokemonTexture" type="TextureRect" parent="."]
margin_left = 54.0
margin_top = 124.0
margin_right = 114.0
margin_bottom = 174.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="affinityPanel" type="HBoxContainer" parent="."]
margin_left = 22.0
margin_top = 81.0
margin_right = 138.0
margin_bottom = 106.0
size_flags_horizontal = 12
size_flags_vertical = 0
alignment = 1

[node name="textureType" type="TextureRect" parent="affinityPanel"]
visible = false
margin_left = 43.0
margin_right = 73.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
